--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
 
         <service
-            android:name=".service.NetworkService"
+            android:name=".service.MediaService"
             android:enabled="true"
             android:exported="false" />
     </application>
